# VisionPipeline-detection

./: README.md  pyproject.toml
detect/: __init__.py
detect/backends/: __init__.py
detect/backends/ultralytics/: __init__.py  detectors.py  export.py
detect/cli/: detect_video.py  export_model.py
detect/core/: artifacts.py  run.py  schema.py  viz.py
detect/registry/: default.json  registry.py
